# unity-mcp

./: README.md  TELEMETRY.md  deploy-dev.sh  pyproject.toml  restore-dev.sh
.github/workflows/: ci.yml
QiaoQiaoDev/unity-mcp/: README.md
QiaoQiaoDev/unity-mcp/ghrs-data/: views_clones_aggregate.csv
QiaoQiaoDev/unity-mcp/ghrs-data/snapshots/: 2025-09-30_231616_views_clones_series_fragment.csv  2025-10-01_231601_views_clones_series_fragment.csv  2025-10-02_231550_views_clones_series_fragment.csv  2025-10-03_231533_views_clones_series_fragment.csv  2025-10-04_231545_views_clones_series_fragment.csv  2025-10-05_231409_views_clones_series_fragment.csv  2025-10-06_231616_views_clones_series_fragment.csv  2025-10-07_231608_views_clones_series_fragment.csv  2025-10-08_231614_views_clones_series_fragment.csv  2025-10-09_231603_views_clones_series_fragment.csv  2025-10-10_231538_views_clones_series_fragment.csv  2025-10-11_231559_views_clones_series_fragment.csv  2025-10-12_231543_views_clones_series_fragment.csv  2025-10-13_231553_views_clones_series_fragment.csv  2025-10-14_231638_views_clones_series_fragment.csv  2025-10-15_231608_views_clones_series_fragment.csv  2025-10-16_231544_views_clones_series_fragment.csv  2025-10-17_231539_views_clones_series_fragment.csv  2025-10-18_231558_views_clones_series_fragment.csv  2025-10-19_231600_views_clones_series_fragment.csv  2025-10-20_231634_views_clones_series_fragment.csv  2025-10-21_231732_views_clones_series_fragment.csv  2025-10-22_231549_views_clones_series_fragment.csv  (+7 more)
QiaoQiaoDev/unity-mcp/latest-report/: report.html  report.md  report_for_pdf.html
UnityMcpBridge/Editor/: MCPForUnityBridge.cs
UnityMcpBridge/Editor/Helpers/: McpLog.cs  RequestContext.cs  Response.cs  TelemetryHelper.cs
UnityMcpBridge/Editor/Models/: Command.cs
UnityMcpBridge/Editor/Settings/: McpSettings.cs  McpSettingsProvider.cs
UnityMcpBridge/UnityMcpServer~/src/: cli.py  config.py  guardrails.py  logging_utils.py  request_context.py  schema_validator.py  server.py  telemetry_decorator.py  unity_connection.py
docs/baseline/: phase0-baseline.md
scripts/: generate_tool_schemas.py
tests/: test_cli.py  test_guardrails.py  test_improved_anchor_matching.py  test_read_console_truncate.py  test_resources_api.py  test_telemetry_queue_worker.py  test_validate_script_summary.py
(+45 files in other folders)
