[project]
name = "unity-mcp-server"
version = "0.0.0"
description = "Local MCP server bridging MCP clients to the Unity Editor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.2",
  "mcp[cli]>=1.4.1",
  "jsonschema>=4.25.0",
  "typer>=0.19.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0"
]

[project.scripts]
unity-mcp-server = "server:main"
unity-mcp = "cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "UnityMcpBridge/UnityMcpServer~/src"}
py-modules = [
  "cli",
  "config",
  "guardrails",
  "logging_utils",
  "port_discovery",
  "reload_sentinel",
  "request_context",
  "schema_validator",
  "server",
  "telemetry",
  "telemetry_decorator",
  "unity_connection"
]
packages = ["tools"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"UnityMcpBridge/UnityMcpServer~/src/tools/*" = ["F401"]
